# airbnb-clone-backend

./: .env  README.md  db.sqlite3  pyproject.toml  render.yaml
bookings/: models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: models.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
config/: settings.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_catogory_alter_perk_detail_and_more.py  0003_rename_catogory_experience_category.py  0004_alter_experience_category_alter_experience_host_and_more.py  0005_experience_pet_friendly.py
medias/: models.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room.py  0003_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_initial.py  0003_room_name_alter_amenity_description.py  0004_alter_amenity_options.py  0005_room_catogory.py  0006_rename_catogory_room_category.py  (+1 more)
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: models.py  serializers.py  views.py
(+6 files in other folders)
